<resources>
    <string name="app_name">Projeto API</string>
    <string name="name">THE OPEN MOVIE DATABASE</string>
    <string name="type_title">Type the Title here…</string>
    <string name="search">SEARCH</string>
    <string name="title">TITLE</string>
    <string name="year">YEAR</string>
    <string name="genre">GENRE</string>
    <string name="plot">PLOT</string>
    <string name="director">DIRECTOR</string>
    <string name="cast">CAST</string>
    <string name="my_movies">MY MOVIES</string>
    <string name="news">NEWS ON STREAMING</string>
    <string name="select_streaming">SELECT YOUR STREAMING SERVICE</string>
    <string name="empty"> </string>
    <string name="last_movies">Check out your favorite productions</string>
    <string name="new_streaming">Keep yourself up to date to the news on streaming!</string>
    <string name="nav_main">Main Screen</string>
    <string name="nav_profile">Profile</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="username">User</string>
    <string name="choose_profile_pic">Choose your profile picture</string>
    <string name="confirm_changes">Confirm</string>
    <string name="about">About</string>
    <string name="info">About the App</string>
    <string name="info_text1">Even though you\'re</string>
    <string name="info_text2">away from Hollywood, the OMDB App is here to bring you all the news and fresh information about the movies you love!</string>
    <string name="info_textNoLocation">Even though you\'re too far away from Hollywood, the OMDB App is here to bring you all the news and fresh information about the movies you love!</string>

    <string-array name="platforms">
        <item>Netflix</item>
        <item>Amazon Prime Video</item>
        <item>Telecine Play</item>
        <item>Youtube Filmes</item>
        <item>HBO Max</item>
    </string-array>

</resources>



